--- a/source/stylesheets/components/_workshops.scss
+++ b/source/stylesheets/components/_workshops.scss
@@ -23,6 +23,8 @@
 .workshop-illustration {
   margin: 0 auto;
   display: block;
+  /*AShergill 24-June-2020: illustration width set to small for small screens */
+  width: 300px;
 }
 
 .side-info-container ul {
@@ -66,13 +68,23 @@
   color: white;
 }
 
+
+@media (min-width:500px) {
+  /*AShergill 24-June-2020: illustration width set to 400px for bigger screens */
+  .workshop-illustration {
+    width: 400px;
+  }
+}
+
 @media (min-width: 900px) {
   .side-info-container {
     width: 25%;
     position: sticky;
     top: 20px;
-  }
+  } 
 }
+
+
 
 @media (max-width: 900px) {
   .side-info-container {
@@ -80,3 +92,4 @@
     padding-left: 15px;
   }
 }
+
